Add 'Treasure' resources

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,10 +28,8 @@
         %a.navbar-brand(href="#") Mytreasures
         .navbar-collapse.collapse.navbar-responsive-collapse
           %ul.nav.navbar-nav
-            %li= link_to "Link 1", "/path1"
+            %li= link_to "Add treasure", new_treasure_path
             %li= link_to "Link 2", "/path2"
-            %li= link_to "Link 3", "/path3"
-            %li= link_to "Link 3", "/path3"
 
     .container
       .row
