--- a/app/views/treasures/_form.html.haml
+++ b/app/views/treasures/_form.html.haml
@@ -1,4 +1,5 @@
 = simple_form_for treasure do |f|
+  = f.input :photo, as: :file
   = f.input :name
   = f.association :warehouse
   = f.association :status
