--- a/app/views/treasures/_form.html.haml
+++ b/app/views/treasures/_form.html.haml
@@ -1,3 +1,5 @@
+= image_tag treasure.photo.url, class: 'img-responsive'
+
 = simple_form_for treasure do |f|
   = f.input :photo, as: :file
   = f.input :name
