Add some layout features

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,8 +28,10 @@
         .container
           .row
             .col-lg-12
-              %p.notice= notice
-              %p.alert= alert
+              - if notice
+                .alert.alert-info= notice
+              - if alert
+                .alert.alert-warn= alert
 
               = yield
           %footer
