--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,13 +26,12 @@
 
       .content-wrapper
         .container
-          .row
-            .col-lg-12
-              - if notice
-                .alert.alert-info= notice
-              - if alert
-                .alert.alert-warn= alert
+          .content
+            - if notice
+              .alert.alert-info= notice
+            - if alert
+              .alert.alert-warn= alert
 
-              = yield
-          %footer
-            %p &copy; Naibaf 2017
+            = yield
+        %footer
+          %p &copy; Naibaf 2017
