--- a/app/views/treasures/index.html.haml
+++ b/app/views/treasures/index.html.haml
@@ -1,7 +1,4 @@
 %div
 - treasures.each do |t|
-  .col-md-3.thumbnail
-    = image_tag t.photo.url(:thumb)
-    %span #{t.name}, #{t.warehouse.name}, #{t.status.name}, #{t.description}
-    = link_to t('remove'), treasure_path(t), method: :delete, data: { confirm: t('remove_confirmation') }
-    = link_to t('edit'), edit_treasure_path(t)
+  .col-md-2.col-sm-2.col-xs-3.thumbnail
+    = link_to (image_tag t.photo.url(:medium)), edit_treasure_path(t)
