Add Warehouse resources

--- a/app/views/layouts/_sidebar_left.html.haml
+++ b/app/views/layouts/_sidebar_left.html.haml
@@ -25,11 +25,7 @@
       %li.header HEADER
       / Optionally, you can add icons to the links
       %li.active
-        %a{:href => "#"}
-          %span Link
-      %li
-        %a{:href => "#"}
-          %span Another Link
+        = link_to 'Warehouses', warehouses_path
       %li.treeview
         %a{:href => "#"}
           %span Multilevel
