--- a/app/views/treasures/index.html.haml
+++ b/app/views/treasures/index.html.haml
@@ -1,4 +1,6 @@
-%div
-- treasures.each do |t|
-  .col-md-2.col-sm-2.col-xs-3.thumbnail
-    = link_to (image_tag t.photo.url(:medium)), treasure_path(t)
+.row
+  - treasures.each do |t|
+    .col-md-2.col-sm-2.col-xs-3.thumbnail
+      = link_to (image_tag t.photo.url(:medium)), treasure_path(t)
+
+= paginate treasures
