Add page 'Messages' (PaperTrail Messages)

--- a/app/views/layouts/_sidebar_left.html.haml
+++ b/app/views/layouts/_sidebar_left.html.haml
@@ -19,6 +19,8 @@
       / Optionally, you can add icons to the links
       %li.active
         = link_to 'Warehouses', warehouses_path
+      %li.active
+        = link_to 'Messages', paper_trail_messages_path
       %li.treeview
         %a{:href => "#"}
           %span Multilevel
