--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,7 +2,7 @@
   %header.main-header
     %a.logo{:href => root_path}
       / LOGO
-      My treasures
+      My Treasures
     / Header Navbar: style can be found in header.less
     %nav.navbar.navbar-static-top{:role => "navigation"}
       %a.sidebar-toggle{"data-toggle" => "offcanvas", :href => "#", :role => "button"}
@@ -11,7 +11,7 @@
       .navbar-custom-menu
         %ul.nav.navbar-nav
           %li
-            = link_to 'Add', new_treasure_path
+            = link_to 'Add treasure', new_treasure_path
 
           = render 'layouts/menu_treasures'
 
