--- a/app/views/layouts/_sidebar_left.html.haml
+++ b/app/views/layouts/_sidebar_left.html.haml
@@ -12,15 +12,8 @@
     %ul.sidebar-menu
       %li.header HEADER
       %li.active
+        = link_to 'Users', users_path
+      %li.active
         = link_to 'Warehouses', warehouses_path
       %li.active
         = link_to 'Messages', paper_trail_messages_path
-      %li.treeview
-        %a{:href => "#"}
-          %span Multilevel
-          %i.fa.fa-angle-left.pull-right
-        %ul.treeview-menu
-          %li
-            %a{:href => "#"} Link in level 2
-          %li
-            %a{:href => "#"} Link in level 2
