--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,46 +1,48 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = devise_error_messages!
+.box.box-primary
+  .box-header.with-border
+    %h3.box-title Edit #{resource_name.to_s.humanize}
 
-  .field
-    = f.label :name
-    %br/
-    = f.text_field :name, autofocus: true
-  .field
-    = f.label :avatar
-    = image_tag @user.avatar
-    %br/
-    = f.file_field :avatar
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    %div
-      Currently waiting confirmation for: #{resource.unconfirmed_email}
-  .field
-    = f.label :password
-    %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-    - if @minimum_password_length
-      %br/
-      %em
-        = @minimum_password_length
-        characters minimum
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .field
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password, autocomplete: "off"
-  .actions
-    = f.submit "Update"
+  = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, role: 'form' }) do |f|
+    - if devise_error_messages!.present?
+      .alert.alert-info= devise_error_messages!
+
+    .box-body
+      .form-group
+        = f.label :name
+        = f.text_field :name, class: 'form-control'
+
+      .form-group
+        = f.label :avatar
+        = f.file_field :avatar
+        %p.help-block
+          = image_tag @user.avatar.url(:thumb), class: 'user-image'
+      .form-group
+        = f.label :email
+        = f.email_field :email, class: 'form-control'
+      - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+        %p.help-block
+          Currently waiting confirmation for: #{resource.unconfirmed_email}
+      .form-group
+        = f.label :password
+        %i (leave blank if you don't want to change it)
+        = f.password_field :password, autocomplete: "off", class: 'form-control'
+        - if @minimum_password_length
+          %p.help-block
+            = @minimum_password_length
+            characters minimum
+      .form-group
+        = f.label :password_confirmation
+        = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'
+      .form-group
+        = f.label :current_password
+        %i (we need your current password to confirm your changes)
+        = f.password_field :current_password, autocomplete: "off", class: 'form-control'
+
+    .box-footer
+      %button.btn.btn-primary{type: "submit"} Update
+
+
 %h3 Cancel my account
 %p
-  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
+  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-default'}
 = link_to "Back", :back
