Format Warehouse new/edit view

--- a/app/views/warehouses/_form.html.haml
+++ b/app/views/warehouses/_form.html.haml
@@ -1,4 +1,10 @@
-= simple_form_for warehouse do |f|
-  = f.input :name
-  = f.input :description, as: :text
-  = f.submit
+.box.box-primary
+  .box-header.with-border
+    %h3.box-title #{title}
+
+  = simple_form_for warehouse do |f|
+    .box-body
+      = f.input :name
+      = f.input :description, as: :text
+    .box-footer
+      = f.submit class: 'btn btn-primary'
