--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,6 +1,12 @@
-= simple_form_for user do |f|
- = f.input :name
- = f.input :avatar, as: :file
- = f.input :password, as: :password
- = f.input :email, as: :email
- = f.submit
+.box.box-primary
+  .box-header.with-border
+    %h3.box-title New
+
+  = simple_form_for user do |f|
+    .box-body
+      = f.input :name
+      = f.input :avatar, as: :file
+      = f.input :password, as: :password
+      = f.input :email, as: :email
+    .box-footer
+      = f.submit class: 'btn btn-primary'
