Allow 'edit' user and disallow 'destroy' user

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,12 +1,13 @@
 .box.box-primary
   .box-header.with-border
-    %h3.box-title New
+    %h3.box-title #{title}
 
   = simple_form_for user do |f|
     .box-body
       = f.input :name
       = f.input :avatar, as: :file
-      = f.input :password, as: :password
+      - unless user.persisted?
+        = f.input :password, as: :password
       = f.input :email, as: :email
     .box-footer
       = f.submit class: 'btn btn-primary'
