--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -9,5 +9,12 @@
       - unless user.persisted?
         = f.input :password, as: :password
       = f.input :email, as: :email
+
+      - for role in User::ROLES
+        = check_box_tag "user[roles][#{role}]", role, user.roles.include?(role), {:name => "user[roles][]"}
+        = label_tag "user_roles_#{role}", role.to_s.humanize
+        %br/
+      = hidden_field_tag "user[roles][]", ""
+
     .box-footer
       = f.submit class: 'btn btn-primary'
