Set default last Warehouse when adding new Threasure

--- a/app/views/treasures/_form.html.haml
+++ b/app/views/treasures/_form.html.haml
@@ -6,7 +6,7 @@
     .box-body
       = f.input :photo, as: :file
       = f.input :name
-      = f.association :warehouse, collection: Warehouse.order(:name)
+      = f.association :warehouse, collection: Warehouse.order(:name), selected: Treasure.get_last_warehouse(current_user.id)
       = f.association :status, collection: Status.order(:name), selected: 1
       = f.input :description, as: :text
 
