Change image label (Alt)

--- a/app/views/layouts/_menu_treasures.html.haml
+++ b/app/views/layouts/_menu_treasures.html.haml
@@ -11,7 +11,7 @@
           %li
             %a{href: treasure_path(mt)}
               .pull-left
-                %img{:alt => "User Image", :src => mt.photo.url(:thumb)}/
+                %img{:alt => "Treasure Image", :src => mt.photo.url(:thumb)}/
               %h4
                 = mt.decorate.name
                 %small
