--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,9 +12,9 @@
  *
  */
 
-@import 'bootstrap-sprockets';
-@import 'bootstrap';
-@import 'font-awesome';
-@import 'adminlte/AdminLTE.min';
-@import 'adminlte/skins/skin-blue-light.min';
+@import 'bootstrap/dist/css/bootstrap.min.css';
+@import 'font-path-overwrite';
+@import 'font-awesome/scss/font-awesome';
+@import 'admin-lte/dist/css/AdminLTE.min';
+@import 'admin-lte/dist/css/skins/skin-blue-light.min';
 @import 'icheck/square/blue';
