--- a/app/views/treasures/index.html.haml
+++ b/app/views/treasures/index.html.haml
@@ -2,7 +2,7 @@
 .row
   %form.sidebar-form{:method => "get"}
     .input-group
-      %input.form-control{:name => "q", :placeholder => "Search...", :type => "text", value: params[:q] }/
+      %input.form-control{:name => "q", :placeholder => I18n.t('search'), :type => "text", value: params[:q] }/
       %span.input-group-btn
         %button#search-btn.btn.btn-flat{:type => "submit"}
           %i.fa.fa-search
