--- a/app/views/treasures/show.html.haml
+++ b/app/views/treasures/show.html.haml
@@ -6,27 +6,27 @@
         = treasure.name
   .row.invoice-info
     .col-sm-5.invoice-col
-      Warehouse
+      = Warehouse.model_name.human
       %p
         %strong= treasure.warehouse.name
       %p
-        %small= "Added #{treasure.decorate.created_at}"
+        %small= "#{I18n.t('added')} #{treasure.decorate.created_at}"
 
     - if treasure.description.present?
       .col-sm-7.invoice-col
-        Description
+        = Treasure.human_attribute_name(:description)
         %div.text-muted.well.well-sm.no-shadow{style:'margin-top: 10px;'}
           = simple_format(treasure.description)
 
   .row.no-print
     .col-xs-12
-      %a.btn.btn-danger.pull-right{href: treasure_path(treasure), data: {confirm: 'Are you sure?', method: :delete}}
+      %a.btn.btn-danger.pull-right{href: treasure_path(treasure), data: {confirm: I18n.t('are_you_sure'), method: :delete}}
         %i.fa.fa-remove
-        Remove
+        = I18n.t('delete')
 
       %a.btn.btn-warning.pull-right{href: edit_treasure_path(treasure), style: 'margin-right: 5px;'}
         %i.fa.fa-edit
-        Edit
+        = I18n.t('edit')
 
 
   %p{style: 'margin-top: 10px'}= image_tag treasure.photo.url, class: 'img-responsive'
