--- a/app/views/treasures/index.html.haml
+++ b/app/views/treasures/index.html.haml
@@ -1,4 +1,3 @@
-/ Search Form (Optional)
 .row
   %form.sidebar-form{:method => "get"}
     .input-group
@@ -8,8 +7,6 @@
           %i.fa.fa-search
 
 .row
-  - treasures.each do |t|
-    .col-md-2.col-sm-2.col-xs-3.thumbnail
-      = link_to (image_tag t.photo.url(:medium)), treasure_path(t)
+  = render treasures
 
 = paginate treasures
