--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,3 +18,12 @@
 @import 'adminlte/AdminLTE.min';
 @import 'adminlte/skins/skin-blue-light.min';
 @import 'icheck/square/blue';
+
+.index-icons {
+  font-size: 1.2em;
+}
+
+.index-icons:hover {
+  text-decoration: none;
+  color: black;
+}
