--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -8,7 +8,7 @@
         %th= User.human_attribute_name(:name)
         %th= User.human_attribute_name(:email)
         %th= User.human_attribute_name(:locale)
-        %th Function
+        %th
 
       - users.each do |u|
         %tr
@@ -16,4 +16,4 @@
           %td= u.email
           %td= u.locale
           %td
-            = link_to I18n.t('edit'), edit_user_path(u)
+            = link_to '', edit_user_path(u), class: 'glyphicon glyphicon-pencil index-icons'
