--- a/app/views/treasures/_treasure.html.haml
+++ b/app/views/treasures/_treasure.html.haml
@@ -1,2 +1,2 @@
 .col-md-2.col-sm-2.col-xs-3.thumbnail
-  = link_to (image_tag treasure.photo.url(:medium)), treasure_path(treasure)
+  = link_to (image_tag treasure.photo.url(:medium)), treasure
