--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,7 +11,7 @@
       .navbar-custom-menu
         %ul.nav.navbar-nav
           %li
-            = link_to I18n.t('add_treasure'), new_treasure_path
+            = link_to I18n.t('add_treasure'), new_treasure_path, id: 'add_treasure'
 
           = render 'layouts/menu_treasures'
 
