--- a/app/views/treasures/_form.html.haml
+++ b/app/views/treasures/_form.html.haml
@@ -13,4 +13,4 @@
         = link_to (image_tag treasure.photo.url(:large), class: 'img-responsive'), treasure.photo.url
 
     .box-footer
-      = f.submit class: 'btn btn-primary'
+      = f.submit class: 'btn btn-primary', id: 'submit'
